# xvk2de

./: .gitignore  CMakeLists.txt  readme.md  run.sh
.github/workflows/: cmake-single-platform.yml
cmake/: include_xev.cmake
demos/: CMakeLists.txt
demos/ballistic/: ballistic.cpp
include/xev/: xev_app.hpp
include/xev/common/: xev_game_object.hpp
include/xev/math/: geometry.hpp  particle.hpp  primitive.hpp
include/xev/physics/: physics.hpp  xe_collider.hpp
include/xev/renderer/: render_system.hpp  xev_device.hpp  xev_pipeline.hpp  xev_swap_chain.hpp
shaders/: particle.frag  particle.vert  simple_shader.frag  simple_shader.vert
src/: AABB.hpp  CMakeLists.txt  components.cpp  components.hpp  first_app.cpp  first_app.hpp  main.cpp  physics.cpp  physics.hpp  primitive.hpp  render_system.cpp  render_system.hpp  simple_render_system.cpp  xev_app.cpp  xev_app.hpp  xev_device.cpp  xev_device.hpp  xev_game_object.hpp  xev_model.cpp  xev_model.hpp  xev_pipeline.cpp  xev_pipeline.hpp  xev_renderer.cpp  xev_renderer.hpp  xev_swap_chain.cpp  xev_swap_chain.hpp  xev_window.cpp  xev_window.hpp
src/common/: primitive.cpp  primitive.hpp  xev_aliases.hpp  xev_game_object.hpp  xev_math.cpp  xev_math.hpp  xev_settings.hpp
src/geometry/: geometry.cpp  geometry.hpp
src/math/: particle.hpp  primitive.hpp  xev_math.hpp
src/physics/: AABB.hpp  collision.cpp  physics.hpp
src/renderer/: particle_system.cpp  particle_system.hpp  render_system.cpp  render_system.hpp  xev_model.cpp  xev_model.hpp  xev_renderer.cpp  xev_swap_chain.cpp  xev_window.hpp
unittest/: CMakeLists.txt  bb_test.cpp  geo_test.cpp  unittest_main.cpp
